# MayaLayerStack

./: .gitignore  CMakeLists.txt  README.md  run_cmake.bat
ArnoldPlugin/: .gitignore  CMakeLists.txt  Usage.md
ArnoldPlugin/plugin/: Ess.ppm  LayerStack.mtd  mlsLayerAddTemplate.py  mlsLayerDielectricTemplate.py  mlsLayerMetalTemplate.py  mlsLayerVolumetricTemplate.py  mlsLayeredSurfaceTemplate.py
ArnoldPlugin/src/: adding_doubling.cpp  microfacet.h  mls_add_node.cpp  mls_bsdf.cpp  mls_bsdf.h  mls_dielectric_node.cpp  mls_metal_node.cpp  mls_node.cpp  mls_volumetric_node.cpp  node_loader.cpp  ppmimage.h  randoms.cpp  randoms.h  util.h
LayerStackPlugin/: CMakeLists.txt
LayerStackPlugin/plugin/: LayerStackPlugin.mll
LayerStackPlugin/plugin/presets/: CarPearlPaint.json  CarbonFiber.json  CopperCoatedVolumetric.json  ExamplePreset.json  GoldCoatedVolumetric.json  RoughGoldDielectric.json  RoughSilver.json
LayerStackPlugin/plugin/textures/: albedo_sRGB_ACEScg.png.tx
LayerStackPlugin/src/: ArnoldUtils.cpp  ArnoldUtils.h  LayerStackCmd.cpp  LayerStackCmd.h  LayeredMaterialNode.cpp  LayeredMaterialNode.h  LayeredShadingGroup.cpp  LayeredShadingGroup.h  PluginMain.cpp
LayerStackPlugin/src/Python/: layer_stack_ui.py  layer_stack_ui_original.py
